--- a/app/views/directives/input-station-exception.html
+++ b/app/views/directives/input-station-exception.html
@@ -94,7 +94,8 @@
 							ng-disabled="viewOnly || itemIsActive"
 							type="text"
 							class="form-control"
-							ng-pattern="regexp.numberAndDecimal"/>
+							maxlength="9"
+							ng-pattern="regexp.sixNumberWithTwoDecimal"/>
 
 					</div>
 
