--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -139,7 +139,14 @@
                       <div class="input-group-addon">
                         {{ currency.code }} *
                       </div>
-                      <input ng-model="formData.amountDiscountValue[currency.id]" name="{{ currency.code }}AmountDiscountValue" ng-disabled="$parent.isDisabled()" type="text" class="form-control" ng-pattern="regexp.price" ng-required="formData.discountTypeId === 2 && $parent.shouldValidatePrice()" />
+                      <input 
+                        ng-model="formData.amountDiscountValue[currency.id]" 
+                        name="{{ currency.code }}AmountDiscountValue" 
+                        ng-disabled="$parent.isDisabled()" 
+                        type="text" class="form-control" 
+                        ng-pattern="regexp.sixNumberWithTwoDecimal"
+                        maxlength="9" 
+                        ng-required="formData.discountTypeId === 2 && $parent.shouldValidatePrice()" />
                     </div>
                   </div>
                 </div>
