--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -60,8 +60,8 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-rate-type">Rate Type</label>
-                <ui-select ng-model="search.taxRateType" theme="bootstrap" name="searchRateType">
+                <label for="searchRateType">Rate Type</label>
+                <ui-select ng-model="search.taxRateType" theme="bootstrap" id="searchRateType" name="searchRateType">
                   <ui-select-match placeholder="Search by Tax Rate Type">
                     {{ $select.selected.taxRateType }}
                   </ui-select-match>
