--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -196,7 +196,7 @@
       </div>
       <div class="row" ng-if="formData.limitByShopDiscountType == 2">
         <div class="col-xs-12 col-sm-6">
-          <div class="form-group">
+          <div class="form-group" ng-class="validation.fieldCssClass(form, 'discountQtyLimitPerShop')">
             <label class="control-label">Discount Qty Limit Per Shop</label>
             <input class="form-control" ng-model="formData.discountQtyLimitPerShop" name="discountQtyLimitPerShop" ng-pattern="regexp.number" ng-disabled="isDisabled()" />
           </div>
