--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -167,7 +167,7 @@
       </div>
       <div class="row" ng-if="formData.limitByShopDiscountType == 1">
         <div class="col-xs-12 col-sm-6">
-          <div class="form-group">
+          <div class="form-group" ng-class="validation.fieldCssClass(form, 'itemQtyLimitPerShop')">
             <label class="control-label">Item Qty Limit Per Shop</label>
             <input class="form-control" ng-model="formData.itemQtyLimitPerShop" name="itemQtyLimitPerShop" ng-pattern="regexp.number" ng-disabled="isDisabled()" />
           </div>
