--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -123,6 +123,12 @@
                   </input>
               </div>    
 
+              <div class="form-group"  ng-class="{ 'has-error' : form.eposDisplaySortOrder.$invalid && displayError , 'has-success' : formData.eposDisplaySortOrder }">
+                  <label>ePos Display Sort Order</label>&nbsp;
+                  <input type="text"  class="form-control"  ng-model="formData.eposDisplaySortOrder" name="eposDisplaySortOrder" ng-pattern="regexp.positiveNumber" max-length="2">
+                  </input>
+              </div>    
+
               <div class="form-group">
                   <label>Keywords</label>&nbsp;
                   <input type="text"  class="form-control"  ng-model="formData.keywords" name="Keywords" ng-pattern="regexp.word"
@@ -567,6 +573,26 @@
 
 </div>
 <!-- /Container -->
+    <div class="modal" id="confirmation-modal" data-backdrop="static" data-keyboard="false">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title">ePos Display Sort Order in use !</h3>
+          </div>
+          <div class="modal-body">
+            <h3 class="modal-body">Do you wish to continue ?</h3>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary btn-primary" ng-click="saveWithSortNumberInUse()">
+              <i class="fa fa-check"></i> Yes
+            </button>
+            <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">
+              <i class="fa fa-close"></i> Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <div class="modal fade" id="imagemodal">
   <div class="modal-dialog">
