--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -123,6 +123,7 @@
         <th>Code</th>
         <th>Name</th>
         <th>POS Display Name</th>
+        <th>POS Display Sort Order</th>
         <th>
           <abbr title="Stock Owner Reference Number">S.O. Ref. #</abbr>
         </th>
@@ -146,6 +147,7 @@
         <td>{{ item.versions[0].itemCode }}</td>
         <td>{{ item.versions[0].itemName }}</td>
         <td>{{ item.versions[0].onBoardName }}</td>
+        <td>{{ item.versions[0].eposDisplaySortOrder }}</td>
         <td ng-show="isOpen(item)" colspan="8"></td>
         <td ng-hide="isOpen(item)">{{ item.versions[0].stockOwnerCode }}</td>
         <td ng-hide="isOpen(item)">{{ item.versions[0].itemTypeName }}</td>
