TSVPORTAL-11835 - Amount limit per shop not cleared after a change

--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
-          <fieldset ng-disabled="isDisabled()" ng-show="formData.isAmountLimitPerShop">
+          <fieldset ng-disabled="isDisabled()" ng-if="formData.isAmountLimitPerShop">
             <div class="row">
               <div class="col-xs-12 col-sm-6">
                 <label>Amount Limit Per Shop Value</label>
