TSVPORTAL-11835 - Discount amount limit per shop not cleared after a change

--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -206,7 +206,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
-          <fieldset ng-disabled="isDisabled()" ng-show="formData.isDiscountAmountLimitPerShop">
+          <fieldset ng-disabled="isDisabled()" ng-if="formData.isDiscountAmountLimitPerShop">
             <div class="row">
               <div class="col-xs-12 col-sm-6">
                 <label>Discount Amount Limit Per Shop Value</label>
