--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -281,7 +281,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-6">
-          <fieldset ng-disabled="isDisabled()" ng-show="formData.isDiscountAmountLimitPerTransaction">
+          <fieldset ng-disabled="isDisabled()" ng-if="formData.isDiscountAmountLimitPerTransaction">
             <div class="row">
               <div class="col-xs-12 col-sm-6">
                 <label>Discount Amount Limit Per Transaction Value</label>
