--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -368,7 +368,7 @@
           </div>
         </div>
       </div>
-      <div class="row" ng-show="showAddRestrictionSection()" ng-repeat="restrictedItem in formData.restrictedItems track by $index">
+      <div class="row" ng-if="showAddRestrictionSection()" ng-repeat="restrictedItem in formData.restrictedItems track by $index">
         <div class="col-xs-12 col-sm-6">
           <div class="form-group">
             <label>Item Category</label>
