--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -400,10 +400,10 @@
           </div>
         </div>
       </div>
-      <div class="row" ng-show="showAddRestrictionSection()" ng-hide="isDisabled()">
+      <div class="row" ng-if="showAddRestrictionSection()" ng-hide="isDisabled()">
         <div class="col-xs-8 col-md-9"></div>
         <div class="col-xs-4 col-md-3 text-right">
-          <div class="input-group" ng-show="showAddRestrictionSection()">
+          <div class="input-group" ng-if="showAddRestrictionSection()">
             <input type="number" min="1" max="100" class="form-control" ng-model="addRestrictedItemsNumber">
             <span class="input-group-btn">
             <button class="btn btn-primary" type="button" ng-click="addRestrictedItems()"><i class="fa fa-plus"></i> Add Items</button>
