--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -123,7 +123,10 @@
         <th>Code</th>
         <th>Name</th>
         <th>POS Display Name</th>
-        <th>POS Display Sort Order</th>
+        <th ng-click="updateOrderBy('eposDisplaySortOrder')">
+          <span ng-class="getArrowIconAndClassForSorting('eposDisplaySortOrder')"></span>
+          POS Display Sort Order
+        </th>
         <th>
           <abbr title="Stock Owner Reference Number">S.O. Ref. #</abbr>
         </th>
@@ -137,8 +140,8 @@
       </tr>
       </thead>
 
-      <tbody ng-repeat="item in itemsList" id="item-{{ item.itemMasterId }}">
-      <tr class="master-row">
+      <tbody>
+      <tr class="master-row" ng-repeat="item in itemsList" id="item-{{ item.itemMasterId }} ">
         <td>
             <span class="fa fa-plus-square-o" ng-show="!isOpen(item) && hasSubVersions(item)"
                   ng-click="toggleVersionVisibility(item)"></span>
