--- a/app/views/directives/error-dialog.html
+++ b/app/views/directives/error-dialog.html
@@ -3,7 +3,7 @@
   <div class="panel-heading">
     <span ng-if="showCustomErrors()">Please Review the Error Below</span>
 		<span ng-if="showValidationErrors()">There are some issues with the fields below. Please update and try again.</span>
-    <span ng-if="showInternalServerError()">A server side error has occured and your request was not processed.</span>
+    <span ng-if="showInternalServerError()">A server side error has occurred and your request was not processed.</span>
     <span ng-if="showFailedRequest()">{{ errorResponse.statusText}} - Please update and try again.</span>
 	</div>
 
