--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -86,64 +86,64 @@
 
           <div class="col-xs-12 col-sm-6">
 
-            <fieldset ng-disabled="isDisabled()">
+            <fieldset>
 
               <div class="form-group" ng-class="{ 'has-error' : !formData.itemCode && displayError , 'has-success' : formData.itemCode }">
                   <label>Retail Item Code *</label>&nbsp;
-                  <input type="text" class="form-control"  ng-model="formData.itemCode" name="Retail Item Code" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem"
+                  <input type="text" class="form-control"  ng-model="formData.itemCode" name="Retail Item Code" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem" ng-disabled="isDisabled()"
                           placeholder="Item123" min-length="1" max-length="10">
                   </input>
               </div>
 
               <div class="form-group" ng-class="{ 'has-error' : !formData.itemName && displayError , 'has-success' : formData.itemName }">
                   <label>Retail Item Name *</label>&nbsp;
-                  <input type="text"  class="form-control"  ng-model="formData.itemName" name="Retail Item Name" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem"
+                  <input type="text"  class="form-control"  ng-model="formData.itemName" name="Retail Item Name" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem" ng-disabled="isDisabled()"
                           placeholder="New Item" min-length="1" max-length="40">
                   </input>
               </div>
 
               <div class="form-group" ng-class="{ 'has-error' : !formData.onBoardName && displayError , 'has-success' : formData.onBoardName }">
                   <label>POS Display Name *</label>&nbsp;
-                  <input type="text"  class="form-control"  ng-model="formData.onBoardName" name="POS Display Name" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem"
+                  <input type="text"  class="form-control"  ng-model="formData.onBoardName" name="POS Display Name" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem" ng-disabled="isDisabled()"
                           placeholder="New Item" min-length="1" max-length="30">
                   </input>
               </div>
 
               <div class="form-group">
                   <label>ePOS Quick Search Code</label>&nbsp;
-                  <input  type="text"  class="form-control"  ng-model="formData.quickSearchCode"  name="ePOS Quick Search Code" ng-pattern="regexp.alphanumeric"
+                  <input  type="text"  class="form-control"  ng-model="formData.quickSearchCode"  name="ePOS Quick Search Code" ng-pattern="regexp.alphanumeric" ng-disabled="isDisabled()"
                           placeholder="ePOS Quick Search Code" max-length="15">
                   </input>
               </div>    
 
               <div class="form-group" ng-class="{ 'has-error' : !formData.desc && displayError , 'has-success' : formData.desc }">
                   <label>Item Description *</label>&nbsp;
-                  <input  type="text"  class="form-control"  ng-model="formData.desc"  name="Item Description" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem"
+                  <input  type="text"  class="form-control"  ng-model="formData.desc"  name="Item Description" required="form.$submitted" ng-pattern="regexp.alphaWithSpecialCharMenuItem" ng-disabled="isDisabled()"
                           placeholder="A simple description..." max-length="255">
                   </input>
               </div>    
 
               <div class="form-group"  ng-class="{ 'has-error' : form.eposDisplaySortOrder.$invalid && displayError , 'has-success' : formData.eposDisplaySortOrder }">
                   <label>ePos Display Sort Order</label>&nbsp;
-                  <input type="text"  class="form-control"  ng-model="formData.eposDisplaySortOrder" name="eposDisplaySortOrder" ng-pattern="regexp.positiveNumber" max-length="2">
+                  <input type="text"  class="form-control"  ng-model="formData.eposDisplaySortOrder" name="eposDisplaySortOrder" ng-pattern="regexp.positiveNumber" max-length="2" ng-disabled="isDisabledEndDateForm()">
                   </input>
               </div>    
 
               <div class="form-group">
                   <label>Keywords</label>&nbsp;
-                  <input type="text"  class="form-control"  ng-model="formData.keywords" name="Keywords" ng-pattern="regexp.word"
+                  <input type="text"  class="form-control"  ng-model="formData.keywords" name="Keywords" ng-pattern="regexp.word" ng-disabled="isDisabled()"
                          placeholder="keywords..." max-length="500">
                   </input>
               </div>    
 
               <div class="form-group">
                   <label>Unique Selling Point</label>&nbsp;
-                  <input type="text"  class="form-control"  ng-model="formData.sellingPoint" name="Unique Selling Point" ng-pattern="regexp.word"
+                  <input type="text"  class="form-control"  ng-model="formData.sellingPoint" name="Unique Selling Point" ng-pattern="regexp.word" ng-disabled="isDisabled()"
                           placeholder="A unique selling point" max-length="100"></input>
               </div>            
 
               <div class="form-group">
-                <input ng-model="formData.isPrintReceipt" type="checkbox"/>
+                <input ng-model="formData.isPrintReceipt" type="checkbox" ng-disabled="isDisabled()"/>
                 <label>Print Receipt</label>
               </div>
 
