--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -193,7 +193,7 @@
             {{ station.stationCode }}
           </p>
         </td>
-        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.companyTaxRateStations && displayError, 'has-success' : taxRate.companyTaxRateStations }">
+        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : (!taxRate.companyTaxRateStations || taxRate.companyTaxRateStations.length === 0) && displayError, 'has-success' : taxRate.companyTaxRateStations }">
           <ui-select ng-if="taxRateSelectReady(taxRate)"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.companyTaxRateStations" theme="bootstrap" sortable="true" close-on-select="true" ng-disabled="isTaxRateStationsDisabled(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableStations | filter: $select.search | orderBy:'stationCode'" position={{taxRate.position}}>
@@ -201,7 +201,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.companyTaxRateStations && displayError, 'has-success' : taxRate.companyTaxRateStations }">
+        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : (!taxRate.companyTaxRateStations || taxRate.companyTaxRateStations.length === 0) && displayError, 'has-success' : taxRate.companyTaxRateStations }">
           <ui-select ng-if="viewIsReady"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.companyTaxRateStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateStationsDisabledForCreate(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableStations | filter: $select.search | orderBy:'stationCode'" position='auto'>
