TSVPORTAL-11934 - Do not display invalid error on wrong search field

--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -75,7 +75,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label for="searchTaxRate">Rate</label>
-                <input ng-model="search.taxRate" type="text" id="searchTaxRate" name="searchTaxRate" class="form-control" placeholder="Search by Tax Rate">
+                <input ng-model="search.taxRate" type="text" id="searchTaxRate" name="searchTaxRate" class="form-control" placeholder="Search by Tax Rate" ng-pattern="regexp.price">
               </div>
             </div>
 
