--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="panel-footer text-right">
-          <button class="btn btn-default" ng-click="clearSearchFilters()" ng-show="showClearButton()" type="button" id="clearTaxRatesId">
+          <button class="btn btn-default" ng-click="clearSearchFilters()" type="button" id="clearTaxRatesId">
             <span>Clear</span>
           </button>
           <button class="btn btn-primary btn-search" ng-click="searchRecords()" id="searchTaxRatesId">
